--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "license": "MIT",
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "html-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "cssnano": "^4.1.11",
-    "autoprefixer": "^9.8.6"
+    "cssnano": "^5.0.6",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
-    "css-loader": "^4.3.0",
-    "eslint": "^7.29.0",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.23.4",
@@ -32,11 +33,12 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.3.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "html-loader": "^2.1.2",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.1",
+    "style-loader": "^3.0.0",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
