--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,8 @@
     ],
     "rules": {
         "react/function-component-definition": "off",
+        "import/prefer-default-export": "off",
+        "react/prop-types": "off",
+        "react/jsx-props-no-spreading": "off"
     }
 }
