--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-boilerplate-react",
   "version": "0.1.1",
   "description": "webpack boilerplate react",
-  "repository": "https://github.com/Mauro-Luna/webpack-boilerplate-react",
+  "repository": "https://github.com/mauroluna-dev/webpack-boilerplate-react.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -p --config ./webpack.prod.js",
