--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "repository": "https://github.com/mauroluna-dev/webpack-boilerplate-react.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p --config ./webpack.prod.js",
+    "build": "webpack --config ./webpack.prod.js",
     "start": "webpack-dev-server --open --config ./webpack.dev.js"
   },
   "author": "Mauro Luna",
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "cssnano": "^5.0.6",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "cssnano": "^5.0.6",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.0.0",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "autoprefixer": "^10.2.6",
