--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./webpack.prod.js",
-    "start": "webpack-dev-server --open --config ./webpack.dev.js"
+    "start": "webpack-dev-server --open --config ./webpack.dev.js",
+    "pre-commit": "yarn run lint",
+    "pre-push": "yarn test",
+    "post-merge": "yarn install", 
+    "post-rewrite": "yarn install"
   },
   "author": "Mauro Luna",
   "license": "MIT",
@@ -33,7 +37,6 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^8.0.1",
     "mini-css-extract-plugin": "^2.0.0",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
