--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./webpack.prod.js",
     "start": "webpack-dev-server --open --config ./webpack.dev.js",
+    "lint": "eslint --ext .jsx,.js src",
     "pre-commit": "yarn run lint",
     "pre-push": "yarn test",
     "post-merge": "yarn install", 
